--- a/activities/locust-swarm/index.html
+++ b/activities/locust-swarm/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>Garden Simulator</title>
+    <title>Locust Simulator</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -15,7 +15,8 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
-    <script src="js/Flower.js"></script>
+    <script src="js/Wheat.js"></script>
+    <!-- <script src="js/locust.js"></script> -->
     <script src="js/script.js"></script>
   </head>
 
