--- a/activities/locust-swarm/index.html
+++ b/activities/locust-swarm/index.html
@@ -15,8 +15,9 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/locust.js"></script>
+    <script src="js/bee.js"></script>
     <script src="js/Wheat.js"></script>
-    <!-- <script src="js/locust.js"></script> -->
     <script src="js/script.js"></script>
   </head>
 
