--- a/projects/project2/finding-self-prototype/make-some-noise/index.html
+++ b/projects/project2/finding-self-prototype/make-some-noise/index.html
@@ -14,10 +14,12 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/stranger.js"></script>
     <script src="js/script.js"></script>
+
   </head>
 
-  
+
   <body>
     <!-- HTML would go here if needed. -->
   </body>
